--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,9 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
     <title>Interskill</title>
+
+    <!-- Fontawesome -->
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet">
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
